force-app/main/default/objects/Voice_Ledgers__c/Voice_Ledgers__c.object-meta.xml
<CustomObject>
    <description>Voice - Ledgers - Company for Account History</description>
    <label>V: Ledger</label>
    <nameField>
        <displayFormat>VCL-{0000000}</displayFormat>
        <label>Voice Company Ledger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>