force-app/main/default/objects/Voice_Ledgers__c/fields/CC_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Number__c</fullName>
    <description>Voice - Ledger - CC Number for the Transaction</description>
    <inlineHelpText>Voice - Ledger - CC Number for the Transaction</inlineHelpText>
    <label>CC Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>