force-app/main/default/objects/Voice_Ledgers__c/fields/CC_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Type__c</fullName>
    <description>Voice - WCSA - Shows CC Type if Available</description>
    <inlineHelpText>Voice - WCSA - Shows CC Type if Available</inlineHelpText>
    <label>CC Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>