force-app/main/default/objects/Voice_Ledgers__c/fields/Charges_USD__c.field-meta.xml
<CustomField>
    <fullName>Charges_USD__c</fullName>
    <description>Voice - Ledger - Transaction Charges Amount in USD from WCSA</description>
    <inlineHelpText>Voice - Ledger - Transaction Charges Amount in USD from WCSA</inlineHelpText>
    <label>Charges (USD)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>