force-app/main/default/objects/Voice_Ledgers__c/fields/CS_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Rep_ID__c</fullName>
    <description>Voice - WCSA - Displays the Name of the CS Rep and the CSUSERKEY. Ex. “Hamlet Bernard (310)”</description>
    <inlineHelpText>Voice - WCSA - Displays the Name of the CS Rep and the CSUSERKEY. Ex. “Hamlet Bernard (310)”</inlineHelpText>
    <label>CS Rep ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>