force-app/main/default/objects/Voice_Ledgers__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Voice - Ledger - Date Value for the Entry from WCSA</description>
    <inlineHelpText>Voice - Ledger - Date Value for the Entry from WCSA</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>