force-app/main/default/objects/Voice_Ledgers__c/fields/LedgerID__c.field-meta.xml
<CustomField>
    <fullName>LedgerID__c</fullName>
    <description>Voice - WCSA - Matching Field for Ledger records</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - Matching Field for Ledger records</inlineHelpText>
    <label>LedgerID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>