force-app/main/default/objects/Voice_Ledgers__c/fields/Payments_USD__c.field-meta.xml
<CustomField>
    <fullName>Payments_USD__c</fullName>
    <description>Voice - Ledger - Payment amount for the Transaction from WCSA</description>
    <inlineHelpText>Voice - Ledger - Payment amount for the Transaction from WCSA</inlineHelpText>
    <label>Payments (USD)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>