force-app/main/default/objects/Voice_Ledgers__c/fields/Transaction_Detail__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Detail__c</fullName>
    <description>Voice - Ledger - Transaction Detail information text from WCSA</description>
    <inlineHelpText>Voice - Ledger - Transaction Detail information text from WCSA</inlineHelpText>
    <label>Transaction Detail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>