force-app/main/default/objects/Voice_Ledgers__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Voice - Ledger - Transaction ID for the Ledger Entry from WCSA</description>
    <inlineHelpText>Voice - Ledger - Transaction ID for the Ledger Entry from WCSA</inlineHelpText>
    <label>Transaction ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>