force-app/main/default/objects/Voice_Ledgers__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Voice - Ledger - Transaction Type from WCSA</description>
    <inlineHelpText>Voice - Ledger - Transaction Type from WCSA</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>CC Payment Reversal</fullName>
            </value>
            <value>
                <fullName>Charge Reversal</fullName>
            </value>
            <value>
                <fullName>Late Fee</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>